syntax = "proto3";

option go_package = "api/src/core/proto";

package grpc_api;

service Greeter {
	rpc SayHello(HelloRequest) returns (HelloReply) {}
	rpc SayMultipleHello(HelloRequest) returns (stream HelloReply) {}
	rpc SayHelloToMultiplePeople(stream HelloRequest) returns (HelloReply) {}
	rpc SayHelloToEachPerson(stream HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
	string name = 1;
}

message HelloReply {
	string message = 1;
}